updated title in index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Dylan Flanders
+title: Dylan Flanders - My personal website - Home
 ---
 <div class="blurb">
     <h1>Hi there, I'm Dylan!</h1>
