add sass experiment

--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@ title: Dylan Flanders - My personal website - Home
 <div class="blurb">
     <h1>Hi there, I'm Dylan!</h1>
     <p>I also go by Flandy. <a href="/about">Read more about my life...</a></p>
+    <p>This is my personal website. The views expressed on these pages represent my own and not those of my employer.</p>
 </div><!-- /.blurb -->
